# sofia-phone

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  HUMANVAD_ANALYSIS.md  LICENSE  README.md  SCORE.md  TWILIO_INTEGRATION.md  VALIDATION.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt
config/freeswitch/dialplan/: sofia_phone.xml
config/freeswitch/sip_profiles/: internal.xml
scripts/: install_freeswitch_mac.sh  setup_freeswitch.sh
src/sofia_phone/: __init__.py  __main__.py
src/sofia_phone/backends/: __init__.py  memory_voice_backend.py
src/sofia_phone/core/: audio_processor.py  config.py  error_recovery.py  health.py  logging_setup.py  phone_handler.py  session_manager.py
src/sofia_phone/freeswitch/: esl_connection.py  rtp_handler.py
src/sofia_phone/interfaces/: voice_backend.py
src/sofia_phone/memory_system/: __init__.py
src/sofia_phone/memory_system/memory/: episodic_store.py
src/sofia_phone/memory_system/surprise/: bayesian_surprise.py.backup
tests/: test_audio_processor.py  test_integration.py  test_session_manager.py
tests/mocks/: mock_voice_backend.py
