[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sofia-phone"
version = "0.1.0"
description = "Production-ready telephony infrastructure for voice AI with episodic memory"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Sofia Phone Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "aiohttp>=3.8.0",
    "aiofiles>=23.0.0",
    "psutil>=5.9.0",
    "loguru>=0.7.0",
    "chromadb>=0.4.0",
    "hmmlearn>=0.3.0",
    "networkx>=3.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
sofia-phone = "sofia_phone.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
